--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <p>7046189550</p>
       </div>
     </div>
+     <marquee>Make your payment to the account details provided to unlock cash!!!</marquee>
     <div class="footer col-sm-12">
       <div class="action reveal">
        
@@ -49,7 +50,7 @@
       </div>
       <br></br>
     <br></br>
-      <marquee>make your payment to the account details provided to unlock cash</marquee>
+      
     </div>
   </div>
    <br></br>
