--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="row content col-sm-12">
       <div class="info unknownBank col-sm-12">
         <p class="title">Bank Name</p>
-        WEMA BANK
+        PAGA
       </div>
 <div class="info unknownBank col-sm-12">
         <p class="title">AMOUNT</p>
@@ -32,11 +32,11 @@
       </div>
       <div class="info col-xs-6">
         <p class="title">Account Name</p>
-        <p>ZEE</p>
+        <p>Black promo</p>
       </div>
       <div class="info col-xs-6">
         <p class="title">Account Number</p>
-        <p>9167499528</p>
+        <p>0358586140</p>
       </div>
     </div>
      <marquee>Make your payment to the account details provided to unlock cash!!!</marquee>
